# feature-prd-runner

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  TRANSFORMATION_ROADMAP.md  __init__.py  constants.py  fsm.py  git_utils.py  io_utils.py  orchestrator.py  prompts.py  pyproject.toml  ruff.toml  runner.py  runner_old.py  signals.py  state.py  tasks.py  utils.py  validation.py  worker.py
.codex/environments/: environment.toml
.github/workflows/: web-ci.yml
actions/: load_plan.py  load_review.py  run_commit.py  run_verify.py  run_worker.py  validate_plan.py  validate_review.py
docs/: API_REFERENCE.md  CLI_REFERENCE.md  CUSTOM_EXECUTION.md  DEBUGGING.md  HUMAN_IN_THE_LOOP.md  ORCHESTRATOR_FIRST_REVAMP_PLAN.md  PARALLEL_EXECUTION.md  README.md  REMAINING_UI_INTEGRATION_PLAN.md  UNIFIED_TASK_ORCHESTRATION_SPEC.md  USER_GUIDE.md  WEB_UI_FEATURE_GAPS.md  collaboration.md
docs/archive/: README.md
example/: AGENTS.md  README.md  feature_prd.md  test_feature_prd.md
example/project/: README.md  math_utils.py
src/feature_prd_runner/: __init__.py  approval_gates.py  breakpoints.py  cli_v3.py  config.py  constants.py  custom_execution.py  debug.py  fsm.py  git_coordinator.py  git_utils.py  io_utils.py  language.py  logging_utils.py  messaging.py  models.py  notifications.py  orchestrator.py  parallel.py  parallel_integration.py  phase_executor.py  (+9 more)
tests/: test_agent_pool.py  test_agent_registry.py  test_approval_gates.py  test_backend_phase1.py  test_branching_behavior.py  test_breakpoints.py  test_cli_v3.py  test_collaboration.py  test_custom_execution.py  test_debug.py  test_dependency_analysis.py  test_doctor_dry_run_cli.py  test_event_hub.py  test_fsm.py  test_fsm_transitions.py  test_gap_fixes.py  test_hitl_gate_enforcement.py  test_import_api.py  test_integration_worker_model_fallback.py  test_language.py  test_list_resume_cli.py  test_live_worker_adapter.py  test_logging_utils.py  test_messaging.py  test_metrics_cli.py  test_multiuser.py  test_notifications.py  test_orchestrator_lifecycle.py  test_orchestrator_parallel.py  test_orchestrator_pipeline_dispatch.py  test_orchestrator_v2_adapter.py  test_orchestrator_worktree.py  test_packaging.py  test_pipeline_engine.py  test_pipeline_registry.py  test_quick_action_agent_fallback.py  test_quick_action_api_async.py  test_quick_action_executor.py  test_quick_runs_api.py  test_revamp_ci_gates.py  (+17 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+223 files in other folders)
