[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-prd-runner"
version = "0.1.0"
description = "Standalone helper module for long-running feature development driven by a PRD."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "loguru",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "tomli>=2; python_version < '3.11'",
]
dev = [
  "mypy>=1.8",
  "ruff>=0.4",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["feature_prd_runner"]
strict = true
ignore_missing_imports = true

[project.scripts]
feature-prd-runner = "feature_prd_runner.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
